# mauborgne

./: .buildconfig  .gitignore  README.md  aegis_decrypt.py  io.github.jhaygood86.mauborgne.yml  meson.build
.github/workflows/: main.yml
data/: application.css  brand_mapping.ini  gresource.xml  gschema.xml  io.github.jhaygood86.mauborgne.appdata.xml.in  io.github.jhaygood86.mauborgne.desktop.in  meson.build
docs/: index.md  mauborgne.flatpakref
po/: LINGUAS  POTFILES  es.po  fr.po  io.github.jhaygood86.mauborgne.pot  it.po  ja.po  meson.build  nb_NO.po  pt.po  pt_BR.po  ru.po
src/: Application.vala  MainWindow.vala  OneTimePad.vala  OneTimePadLibrary.vala  QrHelpers.vala  QrRecognizer.vala
src/Services/: AegisImporter.vala  AegisManager.vala  Portal.vala
src/Services/Models/: AegisVault.vala  AegisVaultContent.vala
src/Widgets/: CreatePasswordDialog.vala  EditDialog.vala  ExportWindow.vala  OneTimePadView.vala  PasswordDialog.vala  SetupKeyDialog.vala
subprojects/qrcodegen/: meson.build  qrcodegen.c  qrcodegen.h
subprojects/quirc/: meson.build
vapi/: cotp.vapi  gcrypt.vapi  json-glib-1.0.vapi  libportal.vapi  qrcodegen.vapi  quirc.vapi
